# bssm

./: LICENSE  Makefile  README.md  bssm.spec  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/bssm/: __init__.py  auth.py  cli.py  ssm.py  ui.py
src/bssm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
